Modified welcome message

--- a/welcome.ipynb
+++ b/welcome.ipynb
@@ -67,7 +67,7 @@
    "source": [
     "RAW CELL\n",
     "\n",
-    "This Cell is a 'Raw' Cell - it's just boring text."
+    "This Cell is a 'Raw' Cell - it's just test text."
    ]
   },
   {
