--- a/lessons/python/ep1a-introduction.ipynb
+++ b/lessons/python/ep1a-introduction.ipynb
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,10 +352,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data = numpy.loadtxt(fname='data/inflammation-01.csv', delimiter=',')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -820,7 +822,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
